==> green777-TR/ch32v003/NRF24L01.c <==
/*
  ***************************************************************************************************************
  ***************************************************************************************************************
  ***************************************************************************************************************

  File:		  NRF24L01.c
  Author:     ControllersTech.com
  Updated:    30th APRIL 2021

  ***************************************************************************************************************
  Copyright (C) 2017 ControllersTech.com

  This is a free software under the GNU license, you can redistribute it and/or modify it under the terms
  of the GNU General Public License version 3 as published by the Free Software Foundation.
  This software library is shared with public for educational purposes, without WARRANTY and Author is not liable for any damages caused directly
  or indirectly by this software, read more about this on the GNU General Public License.

  ***************************************************************************************************************
*/



#include "NRF24L01.h"

//#define SPI1
#define NRF24_SPI &SPI1
/*
#define NRF24_CE_PORT   GPIOD
#define NRF24_CE_PIN    GPIO_PIN_2

#define NRF24_CSN_PORT   GPIOC
#define NRF24_CSN_PIN    GPIO_PIN_3
*/
#define NRF24_CSN_PIN                  GPIO_Pin_3
#define NRF24_CSN_PORT                 GPIOC
#define NRF24_CE_PIN                  GPIO_Pin_2
#define NRF24_CE_PORT                 GPIOD


void CS_Select (void)
{
    GPIO_WriteBit(NRF24_CSN_PORT, NRF24_CSN_PIN, RESET);
}

void CS_UnSelect (void)
{
    GPIO_WriteBit(NRF24_CSN_PORT, NRF24_CSN_PIN,SET);
}


void CE_Enable (void)
{
    GPIO_WriteBit(NRF24_CE_PORT, NRF24_CE_PIN,SET);
}

void CE_Disable (void)
{
    GPIO_WriteBit(NRF24_CE_PORT, NRF24_CE_PIN,RESET);
}



// write a single byte to the particular register
void nrf24_WriteReg (uint8_t Reg, uint8_t Data)
{
	uint8_t buf[2];
	buf[0] = Reg|1<<5;
	buf[1] = Data;

	// Pull the CS Pin LOW to select the device
	CS_Select();

	//HAL_SPI_Transmit(NRF24_SPI, buf, 2, 1000);
	SPISendBytes(buf, 2);

	// Pull the CS HIGH to release the device
	CS_UnSelect();
}

//write multiple bytes starting from a particular register
void nrf24_WriteRegMulti (uint8_t Reg, uint8_t *data, int size)
{
	uint8_t buf[2];
	buf[0] = Reg|1<<5;
//	buf[1] = Data;

	// Pull the CS Pin LOW to select the device
	CS_Select();

	//HAL_SPI_Transmit(NRF24_SPI, buf, 1, 100);
	SPISendBytes(buf, 1);
	//HAL_SPI_Transmit(NRF24_SPI, data, size, 1000);
	SPISendBytes(data,size);

	// Pull the CS HIGH to release the device
	CS_UnSelect();
}


uint8_t nrf24_ReadReg (uint8_t Reg)
{
	uint8_t data=0;

	// Pull the CS Pin LOW to select the device
	CS_Select();

	//HAL_SPI_Transmit(NRF24_SPI, &Reg, 1, 100);
	SPISendBytes(&Reg, 1);
	//HAL_SPI_Receive(NRF24_SPI, &data, 1, 100);
	SPIReceiveBytes(&data, 1);

	// Pull the CS HIGH to release the device
	CS_UnSelect();

	return data;
}


/* Read multiple bytes from the register */
void nrf24_ReadReg_Multi (uint8_t Reg, uint8_t *data, int size)
{
	// Pull the CS Pin LOW to select the device
	CS_Select();

	//HAL_SPI_Transmit(NRF24_SPI, &Reg, 1, 100);
	SPISendBytes(&Reg, 1);
	//HAL_SPI_Receive(NRF24_SPI, data, size, 1000);
	SPIReceiveBytes(&data, size);


	// Pull the CS HIGH to release the device
	CS_UnSelect();
}


// send the command to the NRF
uint8_t nrfsendCmd(uint8_t cmd) {
    uint8_t tx_ok;
        u8 rx_ok;

    // Kéo chân CS xuống LOW để chọn thiết bị
    CS_Select();

    // Gửi lệnh
    tx_ok = SPISendBytes(&cmd, 1); // Gửi lệnh và kiểm tra lỗi truyền

    // Kéo chân CS lên HIGH để nhả thiết bị
    CS_UnSelect();

    // Nếu truyền thành công, trả về 1, ngược lại trả về 0
    if (tx_ok) {
        return 1;
    } else {
        return 0;
    }
}

void nrf24_reset(uint8_t REG)
{
	if (REG == STATUS)
	{
		nrf24_WriteReg(STATUS, 0x00);
	}

	else if (REG == FIFO_STATUS)
	{
		nrf24_WriteReg(FIFO_STATUS, 0x11);
	}

	else {
	nrf24_WriteReg(CONFIG, 0x08);
	nrf24_WriteReg(EN_AA, 0x3F);
	nrf24_WriteReg(EN_RXADDR, 0x03);
	nrf24_WriteReg(SETUP_AW, 0x03);
	nrf24_WriteReg(SETUP_RETR, 0x03);
	nrf24_WriteReg(RF_CH, 0x02);
	nrf24_WriteReg(RF_SETUP, 0x0E);
	nrf24_WriteReg(STATUS, 0x00);
	nrf24_WriteReg(OBSERVE_TX, 0x00);
	nrf24_WriteReg(CD, 0x00);
	uint8_t rx_addr_p0_def[5] = {0xE7, 0xE7, 0xE7, 0xE7, 0xE7};
	nrf24_WriteRegMulti(RX_ADDR_P0, rx_addr_p0_def, 5);
	uint8_t rx_addr_p1_def[5] = {0xC2, 0xC2, 0xC2, 0xC2, 0xC2};
	nrf24_WriteRegMulti(RX_ADDR_P1, rx_addr_p1_def, 5);
	nrf24_WriteReg(RX_ADDR_P2, 0xC3);
	nrf24_WriteReg(RX_ADDR_P3, 0xC4);
	nrf24_WriteReg(RX_ADDR_P4, 0xC5);
	nrf24_WriteReg(RX_ADDR_P5, 0xC6);
	uint8_t tx_addr_def[5] = {0xE7, 0xE7, 0xE7, 0xE7, 0xE7};
	nrf24_WriteRegMulti(TX_ADDR, tx_addr_def, 5);
	nrf24_WriteReg(RX_PW_P0, 0);
	nrf24_WriteReg(RX_PW_P1, 0);
	nrf24_WriteReg(RX_PW_P2, 0);
	nrf24_WriteReg(RX_PW_P3, 0);
	nrf24_WriteReg(RX_PW_P4, 0);
	nrf24_WriteReg(RX_PW_P5, 0);
	nrf24_WriteReg(FIFO_STATUS, 0x11);
	nrf24_WriteReg(DYNPD, 0);
	nrf24_WriteReg(FEATURE, 0);
	}
}




void NRF24_Init (void)
{
	// disable the chip before configuring the device
	CE_Disable();


	// reset everything
	nrf24_reset (0);

	nrf24_WriteReg(CONFIG, 0);  // will be configured later

	nrf24_WriteReg(EN_AA, 0);  // No Auto ACK

	nrf24_WriteReg (EN_RXADDR, 0);  // Not Enabling any data pipe right now

	nrf24_WriteReg (SETUP_AW, 0x03);  // 5 Bytes for the TX/RX address

	nrf24_WriteReg (SETUP_RETR, 0);   // No retransmission

	nrf24_WriteReg (RF_CH, 0);  // will be setup during Tx or RX

	nrf24_WriteReg (RF_SETUP, 0x0E);   // Power= 0db, data rate = 2Mbps

	// Enable the chip after configuring the device
	CE_Enable();

}


// set up the Tx mode

void NRF24_TxMode (uint8_t *Address, uint8_t channel)
{
	// disable the chip before configuring the device
	CE_Disable();

	nrf24_WriteReg (RF_CH, channel);  // select the channel

	nrf24_WriteRegMulti(TX_ADDR, Address, 5);  // Write the TX address
	nrf24_WriteReg(EN_RXADDR, 0x01);

	// power up the device
	uint8_t config = nrf24_ReadReg(CONFIG);
//config = config | (1<<1);   // write 1 in the PWR_UP bit
	config = config & (0xF2);    // write 0 in the PRIM_RX, and 1 in the PWR_UP, and all other bits are masked
	nrf24_WriteReg (CONFIG, config);

	// Enable the chip after configuring the device
	CE_Enable();
}


// transmit the data

uint8_t NRF24_Transmit(uint8_t *data)
{
    uint8_t cmdtosend = 0;

    // Chọn thiết bị nRF24L01
    CS_Select();

    // Gửi lệnh W_TX_PAYLOAD
    cmdtosend = W_TX_PAYLOAD;
    SPISendBytes(&cmdtosend, 1);

    // Gửi dữ liệu payload
    SPISendBytes(data, 32);

    // Bỏ chọn thiết bị nRF24L01
    CS_UnSelect();

    // Delay thay cho HAL_Delay (sử dụng hàm Delay_Ms trong thư viện delay.h)
    Delay_Ms(1);

    uint8_t fifostatus = nrf24_ReadReg(FIFO_STATUS);

    // Kiểm tra xem TX FIFO đã trống và không có lỗi MAX_RT
    if ((fifostatus & (1 << 4)) && !(fifostatus & (1 << 3))) {
        // Xóa cờ trạng thái trong thanh ghi STATUS
        cmdtosend = FLUSH_TX;
        nrfsendCmd(cmdtosend);

        // Đặt lại thanh ghi FIFO_STATUS
        nrf24_reset(FIFO_STATUS);

        return 1; // Truyền thành công
    }

    return 0; // Truyền thất bại
}

void NRF24_RxMode (uint8_t *Address, uint8_t channel)
{
	// disable the chip before configuring the device
	CE_Disable();

	nrf24_reset (STATUS);

	nrf24_WriteReg (RF_CH, channel);  // select the channel

	// select data pipe 2
	uint8_t en_rxaddr = nrf24_ReadReg(EN_RXADDR);
	en_rxaddr = en_rxaddr | (1<<2);
	nrf24_WriteReg (EN_RXADDR, en_rxaddr);

	/* We must write the address for Data Pipe 1, if we want to use any pipe from 2 to 5
	 * The Address from DATA Pipe 2 to Data Pipe 5 differs only in the LSB
	 * Their 4 MSB Bytes will still be same as Data Pipe 1
	 *
	 * For Eg->
	 * Pipe 1 ADDR = 0xAABBCCDD11
	 * Pipe 2 ADDR = 0xAABBCCDD22
	 * Pipe 3 ADDR = 0xAABBCCDD33
	 *
	 */
	nrf24_WriteRegMulti(RX_ADDR_P0, Address, 5);  // Write the Pipe1 address
	nrf24_WriteReg(RX_ADDR_P0, 0x01);  // Write the Pipe2 LSB address

	nrf24_WriteReg (RX_PW_P0, 32);   // 32 bit payload size for pipe 2


	// power up the device in Rx mode
	uint8_t config = nrf24_ReadReg(CONFIG);
	config = config | (1<<1) | (1<<0);
	nrf24_WriteReg (CONFIG, config);

	// Enable the chip after configuring the device
	CE_Enable();
}


uint8_t isDataAvailable (int pipenum)
{
	uint8_t status = nrf24_ReadReg(STATUS);

	if ((status&(1<<6))&&(status&(pipenum<<1)))
	{

		nrf24_WriteReg(STATUS, (1<<6));

		return 1;
	}

	return 0;
}


void NRF24_Receive(uint8_t *data) {
    uint8_t cmdtosend = 0;
    uint8_t payload_size; // Biến để lưu kích thước payload

    // Kiểm tra xem có dữ liệu mới trên pipe 0 không
    if (isDataAvailable(0)==1) {
        // Đọc kích thước payload thực tế
        payload_size = nrf24_ReadReg(RX_PW_P0);

        // Giới hạn kích thước payload tối đa là 32 bytes
        if (payload_size > 32) {
            payload_size = 32;
        }

        // ... (các bước còn lại giống như trước, nhưng thay 32 bằng payload_size)
        SPIReceiveBytes(data, payload_size);
        // ...
    } else {
        // Xử lý lỗi: không có dữ liệu mới trên pipe 0
        // ... (ví dụ: in thông báo lỗi, thử đọc lại, ...)
    }
}

// Read all the Register data
void NRF24_ReadAll (uint8_t *data)
{
	for (int i=0; i<10; i++)
	{
		*(data+i) = nrf24_ReadReg(i);
	}

	nrf24_ReadReg_Multi(RX_ADDR_P0, (data+10), 5);

	nrf24_ReadReg_Multi(RX_ADDR_P1, (data+15), 5);

	*(data+20) = nrf24_ReadReg(RX_ADDR_P2);
	*(data+21) = nrf24_ReadReg(RX_ADDR_P3);
	*(data+22) = nrf24_ReadReg(RX_ADDR_P4);
	*(data+23) = nrf24_ReadReg(RX_ADDR_P5);

	nrf24_ReadReg_Multi(RX_ADDR_P0, (data+24), 5);

	for (int i=29; i<38; i++)
	{
		*(data+i) = nrf24_ReadReg(i-12);
	}

}
